# truncated-cube-lamp

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Caddyfile.devel  Caddyfile.production  LICENSE  README.md  manifest.yml  package-lock.json  qtlogging.ini
.github/workflows/: default.yml
animations/: CMakeLists.txt  Clear.js  Dice.default.animation.js  Dice.js  Rainbow.js  Walker0.js  animation_template.animation.template.js  image_template.image.template.js  walker.default.js
cmake/: qrc_generator.cmake  website_qrc_generator.cmake
containers/: Containerfile.buildenv  README.md
distro/: Config.in  Containerfile  README.md  distro-build.sh  distro-setup.sh  external.desc  external.mk
distro/board/mercotui/truncated-cube-lamp/: .gitignore  README.md  kernel-config.txt
distro/board/mercotui/truncated-cube-lamp/rootfs_overlay/etc/iwd/: main.conf
distro/board/mercotui/truncated-cube-lamp/rootfs_overlay/etc/ssh/: sshd_config
distro/board/mercotui/truncated-cube-lamp/rootfs_overlay/etc/systemd/network/: wifi.network
distro/board/mercotui/truncated-cube-lamp/rootfs_secrets_overlay/root/.ssh/: authorized_keys.template
distro/board/mercotui/truncated-cube-lamp/rootfs_secrets_overlay/var/lib/iwd/: PutWifiSsidHere.psk.template
distro/configs/: truncated-cube-lamp_defconfig
distro/package/caddy/: Config.in  caddy.mk
distro/package/powerbutton/: Config.in  powerbutton.mk
distro/package/qt5httpserver/: Config.in  qt5httpserver.mk
distro/package/truncated_cube_lamp_service/: Config.in  truncated_cube_lamp_service.mk
distro/package/truncated_cube_lamp_website/: Config.in  truncated_cube_lamp_service.mk
libraries/: CMakeLists.txt
powerbutton/: README.md  powerbutton.py  powerbutton.service
server/: Caddyfile.devel  Caddyfile.production  caddy.service  download_and_install.sh
service/: CMakeLists.txt  main.cpp  qtlogging.ini  truncated_cube_lamp.service
service/animation_libraries/: frametimer.js
service/animation_runner/: CMakeLists.txt  animation_runner.cpp  animation_runner.hpp  animation_thread.cpp  animation_thread.hpp  screen_interface_js.cpp  screen_interface_js.hpp
service/animation_runner/tests/: CMakeLists.txt  animation_runner_test.cpp  screen_controller_mock.hpp
service/animations/: Rainbow.default.animation.js  Walker.default.animation.js  shutdown.default.temporary.js  startup.default.temporary.js
service/cmake/: animations.cmake  libraries.cmake
service/http_server/: CMakeLists.txt  http_server.cpp  http_server.hpp
service/http_server/api/: runner_api.cpp  runner_api.hpp  scripts_api.cpp
service/screen/: CMakeLists.txt  dummy_screen_controller.cpp  dummy_screen_controller.hpp  screen_controller.cpp  screen_controller.hpp  screen_controller_interface.hpp
service/screen/demo/: CMakeLists.txt  main.cpp  user_interface.cpp
service/screen/test/: CMakeLists.txt  main.cpp  user_interface.cpp  user_interface.hpp
service/scripts_cache/: CMakeLists.txt  script.cpp  script.hpp  scripts_cache.cpp  scripts_cache.hpp
service/scripts_cache/tests/: CMakeLists.txt  script_test.cpp  scripts_cache_test.cpp
service/signal_monitor/: CMakeLists.txt  signal_monitor.cpp  signal_monitor.hpp
services/: truncated_cube_lamp.service
src/: CMakeLists.txt  animation_runner.cpp  animation_runner.hpp  http_server.cpp  http_server.hpp  main.cpp  runner.cpp
src/animation_runner/: CMakeLists.txt  animation_runner.cpp  animation_runner.hpp  animation_thread.cpp  animation_thread.hpp  screen_controller.cpp  screen_controller.hpp  screen_controller_interface.hpp  screen_interface_js.cpp  screen_interface_js.hpp
src/animation_runner/tests/: CMakeLists.txt  animation_runner_test.cpp  screen_controller_mock.hpp
src/http_server/: CMakeLists.txt  http_server.cpp  http_server.hpp  runner_api.cpp  runner_api.hpp  scripts_api.cpp  scripts_api.hpp  scripts_cache.cpp  scripts_cache.hpp
src/http_server/api/: runner_api.cpp  scripts_api.cpp  scripts_api.hpp
src/screen/: CMakeLists.txt  dummy_screen_controller.cpp  dummy_screen_controller.hpp  screen_controller.cpp  screen_controller.hpp
src/screen/test/: CMakeLists.txt  main.cpp  user_interface.cpp
src/scripts_cache/: CMakeLists.txt  script.cpp  script.hpp  scripts_cache.cpp  scripts_cache.hpp
src/scripts_cache/tests/: CMakeLists.txt  script_test.cpp
website/: .env.online  .eslintrc.js  .gitignore  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  vite.config.mjs
website/public/: index.html
website/src/: App.vue  main.js  mock-server.js  server.js
website/src/components/: CodeEditor.vue  DrawingGrid.vue  LampEmulator.vue  ScriptsList.vue
website/src/plugins/: README.md  index.js  router.js  vuetify.js
website/src/views/: DrawView.vue  IndexView.vue  ScriptView.vue  ScriptsList.vue
